Fixing  mobile table overflow
Fixing issue where the statistics table will overflow on mobile devices.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -692,6 +692,7 @@
 	table {
 		margin: 0 0 _size(element-margin) 0;
 		width: 100%;
+		table-layout: fixed;
 		border: 2px solid _palette(border-bg);
 		tbody {
 			tr {
